<resources>
    <string name="app_name">Library Management System</string>
    <string name="btn_books">Livros</string>
    <string name="btn_users">Usuários</string>
    <string name="btn_history">Histórico</string>
    <string name="main_screen_title">Sistema de Gerenciamento\nde Biblioteca</string>
    <string name="text_field_name">Nome</string>
    <string name="text_field_surname">Sobrenome</string>
    <string name="book_title_label">Título</string>
    <string name="book_description_label">Descrição</string>
    <string name="book_image_url_label">URL da Imagem</string>
    <string name="borrow_username">Nome do Usuário</string>
    <string name="borrow_user">Usuário</string>
    <string name="borrow_book">Livro</string>
    <string name="button_save">Salvar</string>
    <string name="button_delete">Deletar</string>
    <string name="book_form_validation_error">Por favor, informe o título do livro</string>
    <string name="user_form_validation_error">Por favor, informe o nome e sobrenome do usuário</string>
    <string name="borrow_form_validation_error">Por favor, informe o usuário e o livro</string>
    <string name="book_delete_error">Não é possível deletar o livro com empréstimos registrados</string>
    <string name="user_delete_error">Não é possível deletar o usuário com empréstimos registrados</string>
    <string name="empty_book_list_hint">Nenhum livro adicionado ainda</string>
    <string name="empty_user_list_hint">Nenhum usuário adicionado ainda</string>
    <string name="empty_borrow_list_hint">Nenhum empréstimo registrado ainda</string>
    <string name="btn_borrow">Empréstimo</string>
</resources>