<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/main_screen_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_books"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_books"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/black"
        android:text="@string/btn_books"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_users"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/black"
        android:text="@string/btn_users"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_registers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_registers"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/black"
        android:text="@string/btn_registers"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_history"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/black"
        android:text="@string/btn_history"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>